# tiago_dual_moveit_config

./: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: advanced_grasping_sensors_3d.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinematics_kdl.yaml  kinematics_trac_ik.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  sensors_rgbd.yaml  tiago.srdf
config/controllers/: controllers.yaml.em  controllers_custom_custom.yaml  controllers_custom_no-arm.yaml  controllers_custom_pal-hey5_schunk-ft.yaml  controllers_custom_robotiq-2f-140_schunk-ft.yaml  controllers_custom_schunk-ft_pal-gripper_schunk-ft.yaml  controllers_custom_schunk-ft_schunk-wsg_schunk-ft.yaml  controllers_no-arm-left_no-arm-right.yaml  controllers_no-arm-left_no-ee.yaml  controllers_no-arm-left_pal-gripper.yaml  controllers_no-arm-left_pal-hey5.yaml  (+96 more)
launch/: advanced_grasping_moveit_sensor_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch  moveit_rviz.launch.py  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  public_moveit_sensor_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  tiago_dual_moveit_controller_manager.launch.xml  tiago_dual_moveit_sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
module/: move_group.yaml
(+1203 files in other folders)
